# life-lang

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .envrc  .git-blame-ignore-revs  .gitignore  BUILD  CMakeLists.txt  CMakePresets.json  Cargo.toml  GRAMMAR.md  MODULE.bazel  PARSER_REWRITE_PLAN.md  README.md  bazel-bin  bazel-life-lang  bazel-out  bazel-testlogs  coverage.info  devbox.json  flake.nix  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: CI.yaml  build-and-test.yml  clang-tidy.yml  common.yml  coverage.yml
cmake/: ProjectDefaults.cmake  ProjectTools.cmake  remove-gnu-flags-from-compiledb.sh
doc/: GRAMMAR.md  MEMORY_MODEL.md  MODULE_SYSTEM.md  SEMANTIC_ANALYSIS_ROADMAP.md  SEMANTIC_ARCHITECTURE.md  SEXP_GRAMMAR.md
docs/: ROADMAP.md  semantic-analysis-roadmap.md
scripts/: setup-dev-environment.sh
src/: CMakeLists.txt  ast.hpp  ast.rs  config.hpp  diagnostics.cpp  diagnostics.hpp  expected.hpp  lexer.rs  lib.cpp  lib.hpp  lib.rs  main.cpp  main.rs  parser.cpp  parser.hpp  parser.rs  rules.cpp  rules.hpp  semantic_analyzer.cpp  semantic_analyzer.hpp  sexp.cpp  sexp.hpp  spirit_x3.hpp  symbol_table.cpp  symbol_table.hpp  utils.hpp  version.hpp.in
src/ast/: visitor.rs
src/lexer/: diags.rs  get_tokens_utils.rs  indices.rs
src/parser/: ast.hpp  dp.rs  parser.cpp  parser.hpp  sexp.cpp  sexp.hpp
src/semantic/: module_loader.cpp  module_loader.hpp  module_registry.cpp  module_registry.hpp  name_resolver.cpp  name_resolver.hpp  semantic_context.cpp  semantic_context.hpp  symbol_table.cpp  symbol_table.hpp  type.cpp  type.hpp
tests/: .clang-tidy  CMakeLists.txt  parse_error_tests.rs  test_expected_llvm_style.cpp  test_main.cpp  test_parser.cpp  test_spirit.cpp
tests/file_test/testdata/: chained_minus_number.expected  chained_minus_number.llang  else_eof.expected  else_eof.llang  else_follows_not_if_or_lbrace.expected  else_follows_not_if_or_lbrace.llang  else_if_then_eof.expected  else_if_then_eof.llang  if_missing_condition.expected  if_missing_condition.llang  if_then_missing_braces.expected  if_then_missing_braces.llang  let_eof.expected  let_eq_eof.expected  let_imcomplete_rhs.expected  let_imcomplete_rhs.llang  let_invalid_rhs.expected  let_invalid_rhs.llang  let_lhs_eof.expected  let_missing_comma.expected  let_missing_comma.llang  let_missing_eq.expected  let_missing_eq.llang  let_missing_lhs.expected  let_missing_lhs.llang  let_missing_operator_rhs_inside_parens.expected  let_missing_operator_rhs_inside_parens.llang  let_missing_rhs.expected  let_no_type_after_colon.expected  let_no_type_after_colon.llang  let_no_type_after_colon_eof.expected  let_no_type_after_colon_eof.llang  let_rhs_missing_rparen.expected  let_rhs_missing_rparen.llang  let_rhs_missing_rparen_eof.expected  let_rhs_missing_rparen_eof.llang  let_rhs_negative_num_missing_number.expected  let_rhs_negative_num_missing_number.llang  let_rhs_only_rparen.expected  let_rhs_only_rparen.llang  (+31 more)
tests/integration/: test_array_type_in_functions.cpp  test_binary_literals.cpp  test_bitwise_ops.cpp  test_bool_literals.cpp  test_float_special_literals.cpp  test_hex_literals.cpp  test_import_resolution.cpp  test_module_discovery.cpp  test_module_loading.cpp  test_octal_literals.cpp  test_parse_module_integration.cpp  test_raw_string.cpp  test_readme_example.cpp  test_semantic_context.cpp  test_string_interpolation.cpp  test_tuple_types_and_literals.cpp
tests/parser/: internal_rules.hpp  test_array_literal.cpp  test_array_type.cpp  test_assignment.cpp  test_binary_expr.cpp  test_bitwise_ops.cpp  test_block.cpp  test_bool_literal.cpp  test_break_statement.cpp  test_cast_expr.cpp  test_char.cpp  test_comment.cpp  test_continue_statement.cpp  test_diagnostics.cpp  test_enum_def.cpp  test_enum_definition.cpp  test_expr.cpp  test_field_access.cpp  test_float.cpp  test_float_special.cpp  test_for_expr.cpp  test_func_def.cpp  test_func_type.cpp  test_function_call_statement.cpp  test_function_declaration.cpp  test_function_definition.cpp  test_function_parameter.cpp  test_if_expr.cpp  test_impl_block.cpp  test_import.cpp  test_index_expr.cpp  test_integer.cpp  test_internal_parse_errors.cpp  test_keywords.cpp  test_let_statement.cpp  test_match_expr.cpp  test_method_chaining.cpp  test_module.cpp  test_or_pattern.cpp  test_path.cpp  (+30 more)
tests/semantic/: test_declaration_collection.cpp  test_module_loader.cpp  test_module_registry.cpp  test_name_resolver.cpp  test_symbol_table.cpp  test_type.cpp
