module(name = "life-lang", version = "0.0.1")

_RULES_BOOT_COMMIT = "5cdb3c83807d1036bebcc60acf87333e5b3cc856"

bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    urls = "https://github.com/nelhage/rules_boost/archive/{sha}.tar.gz".format(sha = _RULES_BOOT_COMMIT),
    strip_prefix = "rules_boost-{sha}".format(sha = _RULES_BOOT_COMMIT),
    integrity = "sha256-oZTfwfhTZnGKxOT2iknOZ7zhWZXHWXZTvWkSAzaJgDE=",
)
non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_boost_repositories,
    "boost",
)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
)
